# discord_social_sdk

./: .gitignore  Cargo.toml  README.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
crates/discord_social_sdk/: Cargo.toml  README.md
crates/discord_social_sdk/examples/: leakcheck.rs
crates/discord_social_sdk/src/: activity.rs  audio.rs  auth.rs  call.rs  callback.rs  channel.rs  enums.rs  error.rs  handle.rs  lib.rs  lobby.rs  message.rs  relationship.rs  span.rs  string.rs  user.rs
crates/discord_social_sdk/src/client/: auth.rs  lobby.rs  messaging.rs  mod.rs  presence.rs  relationships.rs  voice.rs
crates/discord_social_sdk/tests/: smoke.rs
crates/discord_social_sdk_sys/: Cargo.toml  README.md  build.rs
crates/discord_social_sdk_sys/src/: lib.rs
crates/discord_social_sdk_sys/tests/: link.rs
discord_social_sdk/: all.html  fn.reset_callbacks.html  fn.run_callbacks.html  fn.set_free_threaded.html  index.html  sidebar-items.js
discord_social_sdk/activity/: index.html  sidebar-items.js  struct.Activity.html  struct.ActivityAssets.html  struct.ActivityButton.html  struct.ActivityInvite.html  struct.ActivityParty.html  struct.ActivitySecrets.html  struct.ActivityTimestamps.html
discord_social_sdk/audio/: index.html  sidebar-items.js  struct.AudioDevice.html  struct.VadThresholdSettings.html
discord_social_sdk/auth/: index.html  sidebar-items.js  struct.AuthorizationArgs.html  struct.AuthorizationCodeChallenge.html  struct.AuthorizationCodeVerifier.html  struct.DeviceAuthorizationArgs.html
discord_social_sdk/call/: index.html  sidebar-items.js  struct.Call.html  (+2 more)
discord_social_sdk_sys/: all.html  fn.Discord_ActivityAssets_Clone.html  fn.Discord_ActivityAssets_Drop.html  fn.Discord_ActivityAssets_Init.html  fn.Discord_ActivityAssets_InviteCoverImage.html  fn.Discord_ActivityAssets_LargeImage.html  fn.Discord_ActivityAssets_LargeText.html  fn.Discord_ActivityAssets_LargeUrl.html  fn.Discord_ActivityAssets_SetInviteCoverImage.html  fn.Discord_ActivityAssets_SetLargeImage.html  fn.Discord_ActivityAssets_SetLargeText.html  fn.Discord_ActivityAssets_SetLargeUrl.html  fn.Discord_ActivityAssets_SetSmallImage.html  fn.Discord_ActivityAssets_SetSmallText.html  fn.Discord_ActivityAssets_SetSmallUrl.html  fn.Discord_ActivityAssets_SmallImage.html  fn.Discord_ActivityAssets_SmallText.html  fn.Discord_ActivityAssets_SmallUrl.html  fn.Discord_ActivityButton_Clone.html  fn.Discord_ActivityButton_Drop.html  fn.Discord_ActivityButton_Init.html  fn.Discord_ActivityButton_Label.html  fn.Discord_ActivityButton_SetLabel.html  fn.Discord_ActivityButton_SetUrl.html  fn.Discord_ActivityButton_Url.html  fn.Discord_ActivityInvite_ApplicationId.html  fn.Discord_ActivityInvite_ChannelId.html  fn.Discord_ActivityInvite_Clone.html  fn.Discord_ActivityInvite_Drop.html  fn.Discord_ActivityInvite_Init.html  fn.Discord_ActivityInvite_IsValid.html  fn.Discord_ActivityInvite_MessageId.html  fn.Discord_ActivityInvite_ParentApplicationId.html  fn.Discord_ActivityInvite_PartyId.html  fn.Discord_ActivityInvite_SenderId.html  fn.Discord_ActivityInvite_SessionId.html  fn.Discord_ActivityInvite_SetApplicationId.html  fn.Discord_ActivityInvite_SetChannelId.html  fn.Discord_ActivityInvite_SetIsValid.html  fn.Discord_ActivityInvite_SetMessageId.html  (+621 more)
scripts/: publish-docs.sh
(+115 files in other folders)
