[package]
name = "discord_social_sdk_sys"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Raw FFI bindings to the Discord Social SDK"
readme = "README.md"
keywords = ["discord", "sdk", "ffi", "bindings", "gamedev"]
categories = ["external-ffi-bindings", "game-development"]
links = "discord_partner_sdk"

[build-dependencies]
bindgen = "0.72.1"

[features]
default = []
# Link the Krisp noise-cancellation variant of the SDK.
krisp = []

# No `[package.metadata.docs.rs]`: docs.rs cannot build this crate. It has no
# network access and no copy of the Discord Social SDK, and the SDK's header is
# not redistributable inside a published crate, so bindgen has no input there.
# Documentation is built locally and published to GitHub Pages instead — see
# scripts/publish-docs.sh.
